--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,24 @@
-// Main Sass File
+// Main Sass Fileb
+$bg-color:#333;
+$font-color:#fff;
+$primary-color:#008ed6;
+
+body{
+  background: $bg-color;
+  color: $font-color;
+}
+.navbar{
+  border-bottom: $primary-color 3px solid;
+  opacity: 0.8;
+}
+
+#home-section {
+  background: url("../img/people-mother-family-father.jpg") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 700px;
+  .home-inner{
+    padding-top: 150px;
+  }
+
+}
