--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,8 @@
 $bg-color:#333;
 $font-color:#fff;
 $primary-color:#008ed6;
+$dark-overlay:rgba(0,0,0,0.7);
+$icon-size:30px;
 
 body{
   background: $bg-color;
@@ -20,5 +22,41 @@ body{
   .home-inner{
     padding-top: 150px;
   }
-
+  .dark-overlay{
+    background-color: $dark-overlay;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 700px;
+  }
+  .card-form{
+    opacity: 0.8;
+  }
+  .fa{
+    color:$primary-color;
+    background: #fff;
+    padding: 4px;
+    border-radius: 5px;
+    font-size: $icon-size;
+  }
 }
+#explore-section, #share-section{
+  .fa{
+    color:$primary-color;
+    background: #fff;
+    padding: 4px;
+    border-radius: 5px;
+    font-size: $icon-size;
+  }
+}
+#create-section{
+  .fa{
+    color: $primary-color;
+    background: #fff;
+    padding: 4px;
+    border-radius: 5px;
+    font-size: $icon-size;
+  }
+}
+
